--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,6 @@
   src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
   crossorigin></script>
 
-<script>var Alert = ReactBootstrap.Alert;</script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -40,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>SynchroNUS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
